Fix overflowing UI & buttons in Signature Request screens  (#18247)
* signature-req: fix overflow ui

* signature-req: fix uneven btn height

--- a/ui/components/app/signature-request-original/index.scss
+++ b/ui/components/app/signature-request-original/index.scss
@@ -62,11 +62,11 @@
   }
 
   &__body {
-    width: 100%;
-    height: 100%;
     display: flex;
     flex-flow: column;
-    flex: 1 1 auto;
+    flex: 1 1 0;
+    min-height: 0;
+    max-width: 100%;
   }
 
   &__origin {
@@ -92,18 +92,18 @@
   }
 
   &__rows {
-    height: 100%;
     overflow-y: auto;
     overflow-x: hidden;
     border-top: 1px solid var(--color-border-default);
     display: flex;
     flex-flow: column;
+    flex: 1 1 0;
+    min-height: 0;
   }
 
   &__row {
     display: flex;
     flex-flow: column;
-    flex: 1 0 auto;
   }
 
   &__row-title {
